--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -205,6 +205,7 @@ h1 {
   }
   .card {
     margin-top: 0px;
+    box-shadow: none;
   }
 }
 
